[package]
name = "jackiechan"
version = "0.0.1"
authors = ["tekjar <raviteja@bytebeam.io>"]
description = "Bounded mpsc channel optimized for bulk operations"
license = "MIT"
repository = "https://github.com/tekjar/jackiechan"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
