[package]
name = "jackiechan"
version = "0.0.4"
authors = ["tekjar <raviteja@bytebeam.io>"]
description = "Bounded mpsc channel optimized for lazy bulk operations"
license = "MIT"
repository = "https://github.com/tekjar/jackiechan"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concurrent-queue = "1.2.2"
event-listener = "2.4.0"
futures-core = "0.3.5"

[dev-dependencies]
blocking = "0.6.0"
easy-parallel = "3.1.0"
futures-lite = "1.0.0"
